--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
 <body>
     <main>
         {% include 'registration/login.html' %}
+        {% include 'users/change_password.html' %}
 
         <ul id="userwidget" class="dropdown-content">
             <li><a href="{% url 'own_shifts' %}">Dashboard</a></li>
@@ -33,7 +34,7 @@
             <li><a href="{% url 'own_holidays' %}">My holidays</a></li>
             <li class="divider"></li>
             <li><a href="{% url 'edit_basedata' %}">My base data</a></li>
-            <li><a href="{% url 'change_password' %}">Change password</a></li>
+            <li><a data-target="change-password-modal" class="modal-trigger waves-effect waves-light">Change password</a></li>
             <form method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
                 <li><button type="submit" class="btn amber darken-1 white-text">Logout</button></li>
@@ -41,8 +42,8 @@
         </ul>
 
         <nav>
-            <div class="nav-wrapper light-blue darken-1">
-                <a data-target="sidenav" class="sidenav-trigger show-on-large btn waves-effect waves-light amber darken-1"><i class="material-icons">menu</i></a>
+            <div class="nav-wrapper main-color">
+                <a data-target="sidenav" class="sidenav-trigger show-on-large btn waves-effect waves-light accent-color"><i class="material-icons">menu</i></a>
                 <a href="#" class="brand-logo">ShiftManager</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     {% block contextmenu %}
@@ -69,17 +70,17 @@
                                     <img class="circle" src="{% static '/images/avatar.png' %}">
                                 </div>
                             {% endif %}
-                            <a><span class="amber-text text-darken-1 name">{{ user }}</span></a>
+                            <a><span class="accent-color-text name">{{ user }}</span></a>
                             <a><span class="white-text email">{{ user.email }}</span></a>
                             <form method="post" action="{% url 'logout' %}">
                                 {% csrf_token %}
-                                <button class="btn-floating halfway-fab waves-effect waves-light amber darken-1" href=""><i class="material-icons">logout</i></button>
+                                <button class="btn-floating halfway-fab waves-effect waves-light accent-color" href=""><i class="material-icons">logout</i></button>
                             </form>
                         {% else %}
                             <a><img class="circle" src="{% static '/images/avatar.png' %}"></a>
-                            <a><span class="amber-text text-darken-1 name">Guest</span></a>
+                            <a><span class="accent-color-text name">Guest</span></a>
                             <a><span class="white-text email"></span></a>
-                            <a data-target="login-modal" class="btn-floating halfway-fab modal-trigger waves-effect waves-light amber darken-1"><i class="material-icons">login</i></a>
+                            <a data-target="login-modal" class="btn-floating halfway-fab modal-trigger waves-effect waves-light accent-color"><i class="material-icons">login</i></a>
                         {% endif %}
                     </div>
                 </li>
@@ -87,63 +88,63 @@
                     <ul class="collapsible grey-text text-darken-4">
                         {% if user.is_authorized %}
                             <li>
-                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">settings</i>General Management</div>
+                                <div class="collapsible-header"><i class="material-icons accent-color-text">settings</i>General Management</div>
                                 <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                     <ul>
-                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'useraccounts' %}"><i class="material-icons light-blue-text text-darken-1">group</i>Useraccounts</a></li>{% endif %}
-                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'qualifications' %}"><i class="material-icons light-blue-text text-darken-1">label</i>Qualifications</a></li>{% endif %}
-                                        <li><a class="waves-effect waves-light" href="{% url 'departments' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Departments</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'demand' %}"><i class="material-icons light-blue-text text-darken-1">date_range</i>Personnel demand</a></li>
-                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'datamanagement' %}"><i class="material-icons light-blue-text text-darken-1">cloud</i>Data management</a></li>{% endif %}
+                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'useraccounts' %}"><i class="material-icons main-color-text">group</i>Useraccounts</a></li>{% endif %}
+                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'qualifications' %}"><i class="material-icons main-color-text">label</i>Qualifications</a></li>{% endif %}
+                                        <li><a class="waves-effect waves-light" href="{% url 'departments' %}"><i class="material-icons main-color-text">view_list</i>Departments</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'demand' %}"><i class="material-icons main-color-text">date_range</i>Personnel demand</a></li>
+                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'datamanagement' %}"><i class="material-icons main-color-text">cloud</i>Data management</a></li>{% endif %}
                                     </ul>
                                 </div>
                             </li>
                             <li>
-                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">group</i>Employee Management</div>
+                                <div class="collapsible-header"><i class="material-icons accent-color-text">group</i>Employee Management</div>
                                 <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                     <ul>
-                                        <li><a class="waves-effect waves-light" href="{% url 'employees' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Employees</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'employees' %}"><i class="material-icons main-color-text">view_list</i>Employees</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'absences' %}"><i class="material-icons main-color-text">event_busy</i>Absences</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'holidays' %}"><i class="material-icons main-color-text">flight_takeoff</i>Holidays</a></li>
                                     </ul>
                                 </div>
                             </li>
                             <li>
-                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
+                                <div class="collapsible-header"><i class="material-icons accent-color-text">event</i>Shift Management</div>
                                 <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                     <ul>
-                                        <li><a class="waves-effect waves-light" href="{% url 'shifts' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'work_hours' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Work hours</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Shift templates</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'day_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Day templates</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shifts' %}"><i class="material-icons main-color-text">view_list</i>Shifts</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons main-color-text">event_note</i>Shiftplan</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'work_hours' %}"><i class="material-icons main-color-text">event</i>Work hours</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'availabilities' %}"><i class="material-icons main-color-text">event_available</i>Availabilities</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'wishes' %}"><i class="material-icons main-color-text">event_note</i>Wishes</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons main-color-text">event</i>Shift templates</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'day_templates' %}"><i class="material-icons main-color-text">event</i>Day templates</a></li>
                                     </ul>
                                 </div>
                             </li>
                         {% elif user.role == 'E' %}
                             <li>
-                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">group</i>Employee Management</div>
+                                <div class="collapsible-header"><i class="material-icons accent-color-text">group</i>Employee Management</div>
                                 <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                     <ul>
-                                        <li><a class="waves-effect waves-light" href="{% url 'own_availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'own_wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_availabilities' %}"><i class="material-icons main-color-text">event_available</i>Availabilities</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_wishes' %}"><i class="material-icons main-color-text">event_note</i>Wishes</a></li>
                                     </ul>
                                 </div>
                             </li>
                             <li>
-                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
+                                <div class="collapsible-header"><i class="material-icons accent-color-text">event</i>Shift Management</div>
                                 <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                     <ul>
-                                        <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
-                                        <li><a class="waves-effect waves-light" href="{% url 'own_holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons main-color-text">event_note</i>Shiftplan</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons main-color-text">event_busy</i>Absences</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_holidays' %}"><i class="material-icons main-color-text">flight_takeoff</i>Holidays</a></li>
                                     </ul>
                                 </div>
                             </li>
                         {% else %}
-                            <li><a data-target="login-modal" class="modal-trigger waves-effect waves-light"><i class="material-icons blue-text text-darken-1">info</i>Not logged in</a></li>
+                            <li><a data-target="login-modal" class="modal-trigger waves-effect waves-light"><i class="material-icons main-color-text">info</i>Not logged in</a></li>
                         {% endif %}
                     </ul>
                 </li>
@@ -167,14 +168,16 @@
             {% endif %}
 
             {% block content %}
-                <h1 class="light-blue-text text-darken-1">Welcome</h1>
-                <div class="row">
-                    <div class="col s12 m8">
-                        <div class="card light-blue darken-1">
-                            <div class="card-content white-text">
-                                <p>This application is a working prototype of a shift planning Web-Application</p>
-                                <p>Developed by Florian Kate as a project of the Bachelor Thesis in Media Informatics</p>
-                                <p>Please log in to start</p>
+                <div id="pagecontent">
+                    <h1 class="main-color-text">Welcome</h1>
+                    <div class="row">
+                        <div class="col s12 m8">
+                            <div class="card main-color">
+                                <div class="card-content white-text">
+                                    <p>This application is a working prototype of a shift planning Web-Application</p>
+                                    <p>Developed by Florian Kate as a project of the Bachelor Thesis in Media Informatics</p>
+                                    <p>Please log in to start</p>
+                                </div>
                             </div>
                         </div>
                     </div>
