--- a/templates/users/change_password.html
+++ b/templates/users/change_password.html
@@ -1,32 +1,23 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Edit password{% endblock %}
-
-{% block content %}
-    {% if user.is_authenticated %}
-        <h3 class="light-blue-text text-darken-1">Edit password</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'base' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br><br>
-        <div class="card">
-            <form method="POST" action="{% url 'change_password' %}">
-                {% csrf_token %}
-                <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1"><b>Enter new password</b></div>
-                    <div class="row" style="gap: 1em">
-                        <div class="s6 input-field">
-                            <i class="material-icons prefix">vpn_key</i>
-                            <input type="password" name="new_password1" autocapitalize="none" maxlength="50" required id="id_password1" class="grey-text text-lighten-1" placeholder=" ">
-                            <label for="id_password1">New password</label>
-                        </div>
-                        <div class="s6 input-field">
-                            <i class="material-icons prefix">vpn_key</i>
-                            <input type="password" name="new_password2" autocapitalize="none" maxlength="50" required id="id_password2" class="grey-text text-lighten-1" placeholder=" ">
-                            <label for="id_password2">New password (repeat)</label>
-                        </div>
-                    </div><br>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">update</i>Update password</button>
+<div id="change-password-modal" class="modal" style="min-width: 25%; width: max-content">
+    <form method="POST" action="{% url 'change_password' %}">
+        <div class="modal-content">
+            {% csrf_token %}
+            <h5 class="main-color-text">Enter new password</h5>
+            <div class="row" style="gap: 1em">
+                <div class="s6 input-field">
+                    <i class="material-icons prefix">vpn_key</i>
+                    <input type="password" name="new_password1" autocapitalize="none" maxlength="50" required id="id_password1" class="grey-text text-lighten-1" placeholder=" ">
+                    <label for="id_password1">New password</label>
                 </div>
-            </form>
+                <div class="s6 input-field">
+                    <i class="material-icons prefix">vpn_key</i>
+                    <input type="password" name="new_password2" autocapitalize="none" maxlength="50" required id="id_password2" class="grey-text text-lighten-1" placeholder=" ">
+                    <label for="id_password2">New password (repeat)</label>
+                </div>
+            </div>
         </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        <div class="modal-footer">
+            <button type="submit" class="waves-effect waves-light btn main-color"><i class="material-icons left">update</i>Update password</button>
+        </div>
+    </form>
+</div>
