--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,8 +1,8 @@
-<div id="login-modal" class="modal content-section">
+<div id="login-modal" class="modal" style="min-width: 25%; width: max-content">
     <form method="POST" action="{% url 'login' %}">
-        {% csrf_token %}
         <div class="modal-content">
-            <h5 class="light-blue-text text-darken-1"><b>Login</b></h5>
+        {% csrf_token %}
+            <h5 class="main-color-text"><b>Login</b></h5>
             <div class="row" style="gap: 1em">
                 <div class="s12 input-field">
                     <i class="material-icons prefix">person</i>
@@ -17,8 +17,8 @@
             </div>
         </div>
         <div class="modal-footer">
-            <a class="waves-effect waves-light btn-flat light-blue-text text-darken-1" href="{% url 'password_reset' %}"><i class="material-icons left">question_mark</i>Forgot password</a>
-            <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">login</i>Login</button>
+            <a class="waves-effect waves-light btn-flat main-color-text" href="{% url 'password_reset' %}"><i class="material-icons left">question_mark</i>Forgot password</a>
+            <button type="submit" class="waves-effect waves-light btn main-color"><i class="material-icons left">login</i>Login</button>
         </div>
     </form>
 </div>
